<resources>
    <string name="app_name">Musical Structure</string>
    <string name="nanodegree_android_basic">Nanodegree Android Basic</string>
    <string name="project_04">Project 04</string>
    <string name="by_jesse_lima">by Jesse Lima</string>
    <string name="now_playing">Now Playing</string>
    <string name="paused">Paused!</string>
    <string name="stopped">Stopped!</string>
    <string name="error">Error!</string>
    <string name="error_message">An error has been encountered</string>
    <string name="listen_now">LISTEN NOW</string>
    <string name="song_name">Song Name</string>
    <string name="artist_name">Artist Name</string>
    <string name="_0_00">0:00</string>
    <string name="music_paused">Music Paused!</string>
    <string name="music_stopped">Music stopped!</string>
    <string name="previous_clicked">Previous Clicked!</string>
    <string name="next_clicked">Next Clicked!</string>
    <string name="repeat_clicked">Repeat Clicked!</string>
    <string name="shuffle_clicked">Shuffle Clicked!</string>
    <string name="about_artist">About The Artist</string>
    <string name="year">Year</string>
    <string name="rhythm">Rhythm</string>
    <string name="eletronic">Eletronic</string>
    <string name="fast">Fast</string>
    <string name="duration">Duration</string>
    <string name="rock">ROCK</string>
    <string name="pop">POP</string>
    <string name="reggae">REGGAE</string>
    <string name="indian">INDIAN</string>
    <string name="r_b_and_soul">Soul</string>
    <string name="genre">Genre</string>
    <string name="find_me_on_facebook">Find me on Facebook</string>
    <string name="musical_Structure_genres">Musical Structure Udacity</string>
    <string name="music_details">Music Details Screen</string>
    <string name="musics_by_genres">Musics By Genres</string>
    <string name="music_list">Music List</string>
    <string name="_2017">2017</string>
    <string name="electronic">Electronic</string>
    <string name="all_songs">ALL SONGS</string>
    <string name="image_splash_screen">Image Splash Screen</string>
    <string name="songs">\u0020Songs</string>
    <string name="music_library">Music Library</string>
    <string name="song_details">SONG DETAILS</string>
    <string name="playing">Playing\u0020</string>
    <string name="adde_to_your_favorites">Added to your favorites.</string>
    <string name="adde_to_your_library">Added to your library.</string>
    <string name="top_playlists">Top Playlists</string>
    <string name="recent_albuns">Recent Albuns</string>
    <string name="listen_by_activity">Listen by Activity</string>
    <string name="get_pro_plan_card">Get PRO access today! Get 20% OFF in annual billing.</string>
    <string name="subscribe_to_pro_now">GO PRO NOW</string>
    <string name="top_albums">Top Albums</string>
    <string name="top_playlist">Top Playlist</string>
    <string name="party">PARTY</string>
    <string name="relax">RELAX</string>
    <string name="workout">WORKOUT</string>
    <string name="romantic">ROMANTIC</string>
    <string name="no_ads">No Ads.</string>
    <string name="create_and_personalize_playlists">Create and personalize playlists.</string>
    <string name="create_groups_with_friends_and_family">Create groups with friends and family.</string>
    <string name="collaborative_playlists">Collaborative playlists.</string>
    <string name="access_to_future_features">Access to future features.</string>
    <string name="subscribe_to_pro_message">Subscribe to PRO and get access to all features available.</string>
    <string name="select_billing_period">Select billing period.  Get 20% OFF in Annual Subscription.</string>
    <string name="annual">Annual $48.00</string>
    <string name="monthly">Monthly $5.00</string>
    <string name="fill_the_form">Fill the form to complete your payment:</string>
    <string name="complete_payment">Complete Payment</string>
    <string name="card_ok">Card Validated!</string>
    <string name="card_not_ok">Ops! Something went wrong!</string>
    <string name="payment_activity_description">Here you can see all features available at the PRO plan and validate the Payment. The API Library used here was Simplify (www.simplify.com) \n The library provides a View com.simplify.android.sdk.CardEditor that already provide the validation of the input card data. PaymentActivity.java is ready do be used according to Simplify documentation. It\'s checks if the card is valid or not. The API key points to a Sandbox I create in My account for tests purposes.</string>
    <string name="music_library_activity_description">Select a music genre to see music by genre or click ALL SONGS to see the full library.</string>
    <string name="music_details_activity_description">See music details below. You can also see the artist Facebook page clicking on the Facebook icon at the bottom content.</string>
    <string name="music_list_activity_description">Here You can see all songs available in the app. Just click at the sound you want listen to go to now playing.</string>
    <string name="music_list_by_genre_description">Here You can the songs filtered by the genre you have selected. Just click at the sound you want listen to go to now playing.</string>
    <string name="now_activity_description">Click play button to listen the music. Internet connection is required. You can pause and use seek bar. Click on SONG DETAILS button to see more info about the music.\n IMPORTANT: This activity uses Android Open Source Audio Player (OpenMXPlayer) from Pocket Magic. The library is on the openMXPlayer package folder.</string>
    <string name="click_to_hide_the_message">CLICK ON THIS CARD TO HIDE THE MESSAGE</string>
</resources>
