<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_genres"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/layout_margin16"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    tools:context="com.udacity.nanodegree.musicalstructure.MusicLibraryActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/textColorWhite"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        android:layout_marginLeft="@dimen/layout_margin8"
        android:layout_marginTop="@dimen/layout_margin8"
        android:layout_marginRight="@dimen/layout_margin8"
        android:layout_marginBottom="@dimen/layout_margin16">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_sub_heading"
            android:textColor="@color/colorPrimary"
            android:text="@string/music_library_activity_description"
            android:layout_marginBottom="@dimen/layout_margin16"
            android:padding="@dimen/layout_margin8"/>

    </android.support.v7.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cardBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:layout_marginLeft="@dimen/layout_margin8"
            android:layout_marginRight="@dimen/layout_margin8"
            android:layout_marginBottom="@dimen/layout_margin16"
            app:cardPreventCornerOverlap="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/cardGenres">
                    <android.support.v7.widget.CardView
                        android:id="@+id/card_rock"
                        style="@style/cardGenresLayout"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp"
                        app:cardPreventCornerOverlap="true">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/layout_margin8"
                            android:text="@string/rock"
                            android:textAllCaps="true"
                            android:textColor="@color/textColorWhite"
                            android:textSize="@dimen/text_size_16"
                            android:textStyle="bold"/>
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/card_electronic"
                        style="@style/cardGenresLayout"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp"
                        app:cardPreventCornerOverlap="true">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/layout_margin8"
                            android:text="@string/eletronic"
                            android:textAllCaps="true"
                            android:textColor="@color/textColorWhite"
                            android:textSize="@dimen/text_size_16"
                            android:textStyle="bold"/>
                    </android.support.v7.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    style="@style/cardGenres">
                    <android.support.v7.widget.CardView
                        android:id="@+id/card_pop"
                        style="@style/cardGenresLayout"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp"
                        app:cardPreventCornerOverlap="true">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/layout_margin8"
                            android:text="@string/pop"
                            android:textAllCaps="true"
                            android:textColor="@color/textColorWhite"
                            android:textSize="@dimen/text_size_16"
                            android:textStyle="bold"/>
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/card_reggae"
                        style="@style/cardGenresLayout"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp"
                        app:cardPreventCornerOverlap="true">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/layout_margin8"
                            android:text="@string/reggae"
                            android:textAllCaps="true"
                            android:textColor="@color/textColorWhite"
                            android:textSize="@dimen/text_size_16"
                            android:textStyle="bold"/>
                    </android.support.v7.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    style="@style/cardGenres">
                    <android.support.v7.widget.CardView
                        android:id="@+id/card_indian"
                        style="@style/cardGenresLayout"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp"
                        app:cardPreventCornerOverlap="true">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/layout_margin8"
                            android:text="@string/indian"
                            android:textAllCaps="true"
                            android:textColor="@color/textColorWhite"
                            android:textSize="@dimen/text_size_16"
                            android:textStyle="bold"/>
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/card_soul"
                        style="@style/cardGenresLayout"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp"
                        app:cardPreventCornerOverlap="true">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/layout_margin8"
                            android:text="@string/r_b_and_soul"
                            android:textAllCaps="true"
                            android:textColor="@color/textColorWhite"
                            android:textSize="@dimen/text_size_16"
                            android:textStyle="bold"/>
                    </android.support.v7.widget.CardView>
                </LinearLayout>
                <Button
                    style="@style/buttonDefault"
                    android:id="@+id/card_all_songs"
                    android:text="@string/all_songs"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>






    </ScrollView>
</LinearLayout>
