<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_genres"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/layout_margin16"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    tools:context="com.udacity.nanodegree.musicalstructure.MusicGenresActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <LinearLayout
                    style="@style/cardGenres">
                    <android.support.v7.widget.CardView
                        android:id="@+id/card_rock"
                        style="@style/cardGenresLayout"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp"
                        app:cardPreventCornerOverlap="true">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/layout_margin16"
                            android:text="@string/rock"
                            android:textAllCaps="true"
                            android:textColor="@color/textColorWhite"
                            android:textSize="@dimen/text_size_16"
                            android:textStyle="bold"/>
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/card_electronic"
                        style="@style/cardGenresLayout"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp"
                        app:cardPreventCornerOverlap="true">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/layout_margin16"
                            android:text="@string/eletronic"
                            android:textAllCaps="true"
                            android:textColor="@color/textColorWhite"
                            android:textSize="@dimen/text_size_16"
                            android:textStyle="bold"/>
                    </android.support.v7.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    style="@style/cardGenres">
                    <android.support.v7.widget.CardView
                        android:id="@+id/card_pop"
                        style="@style/cardGenresLayout"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp"
                        app:cardPreventCornerOverlap="true">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/layout_margin16"
                            android:text="@string/pop"
                            android:textAllCaps="true"
                            android:textColor="@color/textColorWhite"
                            android:textSize="@dimen/text_size_16"
                            android:textStyle="bold"/>
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/card_reggae"
                        style="@style/cardGenresLayout"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp"
                        app:cardPreventCornerOverlap="true">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/layout_margin16"
                            android:text="@string/reggae"
                            android:textAllCaps="true"
                            android:textColor="@color/textColorWhite"
                            android:textSize="@dimen/text_size_16"
                            android:textStyle="bold"/>
                    </android.support.v7.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    style="@style/cardGenres">
                    <android.support.v7.widget.CardView
                        android:id="@+id/card_indian"
                        style="@style/cardGenresLayout"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp"
                        app:cardPreventCornerOverlap="true">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/layout_margin16"
                            android:text="@string/indian"
                            android:textAllCaps="true"
                            android:textColor="@color/textColorWhite"
                            android:textSize="@dimen/text_size_16"
                            android:textStyle="bold"/>
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/card_soul"
                        style="@style/cardGenresLayout"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp"
                        app:cardPreventCornerOverlap="true">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/layout_margin16"
                            android:text="@string/r_b_and_soul"
                            android:textAllCaps="true"
                            android:textColor="@color/textColorWhite"
                            android:textSize="@dimen/text_size_16"
                            android:textStyle="bold"/>
                    </android.support.v7.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    style="@style/cardGenres">
                    <View
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_margin="@dimen/layout_margin8"
                        android:layout_weight="1"
                        android:backgroundTint="@color/cardBackgroundBlack"/>
                    <android.support.v7.widget.CardView
                        android:id="@+id/card_all_songs"
                        style="@style/cardGenresLayout"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp"
                        app:cardPreventCornerOverlap="true">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/layout_margin16"
                            android:text="@string/all_songs"
                            android:textAllCaps="true"
                            android:textColor="@color/textColorWhite"
                            android:textSize="@dimen/text_size_16"
                            android:textStyle="bold"/>
                    </android.support.v7.widget.CardView>
                    <View
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_margin="@dimen/layout_margin8"
                        android:layout_weight="1"
                        android:backgroundTint="@color/cardBackgroundBlack"/>
                </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
